// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`environment config > should normalize environment config correctly 1`] = `
{
  "dev": {
    "assetPrefix": "/",
    "cliShortcuts": false,
    "client": {
      "host": "",
      "overlay": true,
      "path": "/rsbuild-hmr",
      "port": "",
      "reconnect": 100,
    },
    "hmr": true,
    "lazyCompilation": true,
    "liveReload": true,
    "watchFiles": [],
    "writeToDisk": false,
  },
  "html": {
    "crossorigin": false,
    "inject": "head",
    "meta": {
      "charset": {
        "charset": "UTF-8",
      },
      "viewport": "width=device-width, initial-scale=1.0",
    },
    "mountId": "root",
    "outputStructure": "flat",
    "scriptLoading": "defer",
    "title": "Rsbuild App",
  },
  "mode": "development",
  "output": {
    "assetPrefix": "/",
    "charset": "utf8",
    "cleanDistPath": "auto",
    "cssModules": {
      "auto": true,
      "exportGlobals": false,
      "exportLocalsConvention": "camelCase",
      "namedExport": false,
    },
    "dataUriLimit": {
      "assets": 4096,
      "font": 4096,
      "image": 4096,
      "media": 4096,
      "svg": 4096,
    },
    "distPath": {
      "assets": "static/assets",
      "css": "static/css",
      "font": "static/font",
      "html": "./",
      "image": "static/image",
      "js": "static/js",
      "media": "static/media",
      "root": "dist",
      "svg": "static/svg",
      "wasm": "static/wasm",
    },
    "emitAssets": true,
    "filename": {},
    "filenameHash": true,
    "injectStyles": false,
    "inlineScripts": false,
    "inlineStyles": false,
    "legalComments": "linked",
    "manifest": false,
    "minify": true,
    "polyfill": "off",
    "sourceMap": {
      "css": false,
      "js": undefined,
    },
    "target": "web",
  },
  "performance": {
    "chunkSplit": {
      "strategy": "split-by-experience",
    },
    "printFileSize": true,
    "profile": false,
    "removeConsole": false,
    "removeMomentLocale": false,
  },
  "resolve": {
    "alias": {
      "@common": "./src/common",
      "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
    },
    "aliasStrategy": "prefer-tsconfig",
    "extensions": [
      ".ts",
      ".tsx",
      ".mjs",
      ".js",
      ".jsx",
      ".json",
    ],
  },
  "root": "<ROOT>",
  "security": {
    "nonce": "",
    "sri": {
      "enable": false,
    },
  },
  "server": {
    "base": "/",
    "compress": true,
    "cors": {
      "origin": /\\^https\\?:\\\\/\\\\/\\(\\?:\\(\\?:\\[\\^:\\]\\+\\\\\\.\\)\\?localhost\\|127\\\\\\.0\\\\\\.0\\\\\\.1\\|\\\\\\[::1\\\\\\]\\)\\(\\?::\\\\d\\+\\)\\?\\$/,
    },
    "host": "0.0.0.0",
    "htmlFallback": "index",
    "middlewareMode": false,
    "open": false,
    "port": 3000,
    "printUrls": true,
    "strictPort": false,
  },
  "source": {
    "alias": {},
    "decorators": {
      "version": "2022-03",
    },
    "define": {},
    "entry": {
      "index": "./src/index.client.js",
    },
    "preEntry": [],
  },
  "tools": {
    "cssExtract": {
      "loaderOptions": {},
      "pluginOptions": {
        "ignoreOrder": true,
      },
    },
  },
}
`;

exports[`environment config > should normalize environment config correctly 2`] = `
{
  "dev": {
    "assetPrefix": "/foo",
    "cliShortcuts": false,
    "client": {
      "host": "",
      "overlay": true,
      "path": "/rsbuild-hmr",
      "port": "",
      "reconnect": 100,
    },
    "hmr": true,
    "lazyCompilation": false,
    "liveReload": true,
    "watchFiles": [],
    "writeToDisk": false,
  },
  "html": {
    "crossorigin": false,
    "inject": "head",
    "meta": {
      "charset": {
        "charset": "UTF-8",
      },
      "viewport": "width=device-width, initial-scale=1.0",
    },
    "mountId": "root",
    "outputStructure": "flat",
    "scriptLoading": "defer",
    "title": "Rsbuild App",
  },
  "mode": "development",
  "output": {
    "assetPrefix": "/",
    "charset": "utf8",
    "cleanDistPath": "auto",
    "cssModules": {
      "auto": true,
      "exportGlobals": false,
      "exportLocalsConvention": "camelCase",
      "namedExport": false,
    },
    "dataUriLimit": {
      "assets": 4096,
      "font": 4096,
      "image": 4096,
      "media": 4096,
      "svg": 4096,
    },
    "distPath": {
      "assets": "static/assets",
      "css": "static/css",
      "font": "static/font",
      "html": "./",
      "image": "static/image",
      "js": "",
      "media": "static/media",
      "root": "dist",
      "svg": "static/svg",
      "wasm": "static/wasm",
    },
    "emitAssets": true,
    "filename": {},
    "filenameHash": true,
    "injectStyles": false,
    "inlineScripts": false,
    "inlineStyles": false,
    "legalComments": "linked",
    "manifest": false,
    "minify": true,
    "polyfill": "off",
    "sourceMap": {
      "css": false,
      "js": undefined,
    },
    "target": "node",
  },
  "performance": {
    "chunkSplit": {
      "strategy": "split-by-experience",
    },
    "printFileSize": true,
    "profile": false,
    "removeConsole": false,
    "removeMomentLocale": false,
  },
  "resolve": {
    "alias": {
      "@common": "./src/common",
      "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
    },
    "aliasStrategy": "prefer-tsconfig",
    "extensions": [
      ".ts",
      ".tsx",
      ".mjs",
      ".js",
      ".jsx",
      ".json",
    ],
  },
  "root": "<ROOT>",
  "security": {
    "nonce": "",
    "sri": {
      "enable": false,
    },
  },
  "server": {
    "base": "/",
    "compress": true,
    "cors": {
      "origin": /\\^https\\?:\\\\/\\\\/\\(\\?:\\(\\?:\\[\\^:\\]\\+\\\\\\.\\)\\?localhost\\|127\\\\\\.0\\\\\\.0\\\\\\.1\\|\\\\\\[::1\\\\\\]\\)\\(\\?::\\\\d\\+\\)\\?\\$/,
    },
    "host": "0.0.0.0",
    "htmlFallback": "index",
    "middlewareMode": false,
    "open": false,
    "port": 3000,
    "printUrls": true,
    "strictPort": false,
  },
  "source": {
    "alias": {},
    "decorators": {
      "version": "2022-03",
    },
    "define": {},
    "entry": {
      "index": "./src/index.server.js",
    },
    "preEntry": [],
  },
  "tools": {
    "cssExtract": {
      "loaderOptions": {},
      "pluginOptions": {
        "ignoreOrder": true,
      },
    },
  },
}
`;

exports[`environment config > should print environment config when inspect config 1`] = `
{
  "ssr": {
    "dev": {
      "assetPrefix": "/",
      "cliShortcuts": false,
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
        "reconnect": 100,
      },
      "hmr": true,
      "liveReload": true,
      "watchFiles": [],
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "mode": "development",
    "output": {
      "assetPrefix": "/",
      "charset": "utf8",
      "cleanDistPath": "auto",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "assets": 4096,
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "assets": "static/assets",
        "css": "static/css",
        "font": "static/font",
        "html": "./",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "off",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "resolve": {
      "alias": {
        "@common": "./src/common",
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
      "aliasStrategy": "prefer-tsconfig",
      "extensions": [
        ".ts",
        ".tsx",
        ".mjs",
        ".js",
        ".jsx",
        ".json",
      ],
    },
    "root": "<ROOT>",
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "base": "/",
      "compress": true,
      "cors": {
        "origin": /\\^https\\?:\\\\/\\\\/\\(\\?:\\(\\?:\\[\\^:\\]\\+\\\\\\.\\)\\?localhost\\|127\\\\\\.0\\\\\\.0\\\\\\.1\\|\\\\\\[::1\\\\\\]\\)\\(\\?::\\\\d\\+\\)\\?\\$/,
      },
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "middlewareMode": false,
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {},
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "./src/index.server.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
  "web": {
    "dev": {
      "assetPrefix": "/",
      "cliShortcuts": false,
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
        "reconnect": 100,
      },
      "hmr": true,
      "liveReload": true,
      "watchFiles": [],
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "mode": "development",
    "output": {
      "assetPrefix": "/",
      "charset": "utf8",
      "cleanDistPath": "auto",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "assets": 4096,
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "assets": "static/assets",
        "css": "static/css",
        "font": "static/font",
        "html": "./",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "off",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "resolve": {
      "alias": {
        "@common": "./src/common",
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
      "aliasStrategy": "prefer-tsconfig",
      "extensions": [
        ".ts",
        ".tsx",
        ".mjs",
        ".js",
        ".jsx",
        ".json",
      ],
    },
    "root": "<ROOT>",
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "base": "/",
      "compress": true,
      "cors": {
        "origin": /\\^https\\?:\\\\/\\\\/\\(\\?:\\(\\?:\\[\\^:\\]\\+\\\\\\.\\)\\?localhost\\|127\\\\\\.0\\\\\\.0\\\\\\.1\\|\\\\\\[::1\\\\\\]\\)\\(\\?::\\\\d\\+\\)\\?\\$/,
      },
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "middlewareMode": false,
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {},
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "./src/index.client.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
}
`;

exports[`environment config > should support add single environment plugin 1`] = `
{
  "ssr": {
    "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
    "global": "ssr",
    "ssr": "ssr",
  },
  "web": {
    "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
    "global": "web",
    "web": "web",
  },
}
`;

exports[`environment config > should support modify environment config by api.modifyRsbuildConfig 1`] = `
{
  "ssr": {
    "dev": {
      "assetPrefix": "/",
      "cliShortcuts": false,
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
        "reconnect": 100,
      },
      "hmr": true,
      "liveReload": true,
      "watchFiles": [],
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "mode": "development",
    "output": {
      "assetPrefix": "/",
      "charset": "utf8",
      "cleanDistPath": "auto",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "assets": 4096,
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "assets": "static/assets",
        "css": "static/css",
        "font": "static/font",
        "html": "./",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "off",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "resolve": {
      "alias": {
        "@common": "./src/common",
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
      "aliasStrategy": "prefer-tsconfig",
      "extensions": [
        ".ts",
        ".tsx",
        ".mjs",
        ".js",
        ".jsx",
        ".json",
      ],
    },
    "root": "<ROOT>",
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "base": "/",
      "compress": true,
      "cors": {
        "origin": /\\^https\\?:\\\\/\\\\/\\(\\?:\\(\\?:\\[\\^:\\]\\+\\\\\\.\\)\\?localhost\\|127\\\\\\.0\\\\\\.0\\\\\\.1\\|\\\\\\[::1\\\\\\]\\)\\(\\?::\\\\d\\+\\)\\?\\$/,
      },
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "middlewareMode": false,
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {},
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "./src/index.server.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
  "web": {
    "dev": {
      "assetPrefix": "/",
      "cliShortcuts": false,
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
        "reconnect": 100,
      },
      "hmr": true,
      "liveReload": true,
      "watchFiles": [],
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "mode": "development",
    "output": {
      "assetPrefix": "/",
      "charset": "utf8",
      "cleanDistPath": "auto",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "assets": 4096,
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "assets": "static/assets",
        "css": "static/css",
        "font": "static/font",
        "html": "./",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "off",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "resolve": {
      "alias": {
        "@common": "./src/common",
        "@common1": "./src/common1",
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
      "aliasStrategy": "prefer-tsconfig",
      "extensions": [
        ".ts",
        ".tsx",
        ".mjs",
        ".js",
        ".jsx",
        ".json",
      ],
    },
    "root": "<ROOT>",
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "base": "/",
      "compress": true,
      "cors": {
        "origin": /\\^https\\?:\\\\/\\\\/\\(\\?:\\(\\?:\\[\\^:\\]\\+\\\\\\.\\)\\?localhost\\|127\\\\\\.0\\\\\\.0\\\\\\.1\\|\\\\\\[::1\\\\\\]\\)\\(\\?::\\\\d\\+\\)\\?\\$/,
      },
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "middlewareMode": false,
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {},
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "./src/index.client.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
  "web1": {
    "dev": {
      "assetPrefix": "/",
      "cliShortcuts": false,
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
        "reconnect": 100,
      },
      "hmr": true,
      "liveReload": true,
      "watchFiles": [],
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "mode": "development",
    "output": {
      "assetPrefix": "/",
      "charset": "utf8",
      "cleanDistPath": "auto",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "assets": 4096,
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "assets": "static/assets",
        "css": "static/css",
        "font": "static/font",
        "html": "./",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "off",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "resolve": {
      "alias": {
        "@common": "./src/common",
        "@common1": "./src/common1",
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
      "aliasStrategy": "prefer-tsconfig",
      "extensions": [
        ".ts",
        ".tsx",
        ".mjs",
        ".js",
        ".jsx",
        ".json",
      ],
    },
    "root": "<ROOT>",
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "base": "/",
      "compress": true,
      "cors": {
        "origin": /\\^https\\?:\\\\/\\\\/\\(\\?:\\(\\?:\\[\\^:\\]\\+\\\\\\.\\)\\?localhost\\|127\\\\\\.0\\\\\\.0\\\\\\.1\\|\\\\\\[::1\\\\\\]\\)\\(\\?::\\\\d\\+\\)\\?\\$/,
      },
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "middlewareMode": false,
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {},
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {},
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
}
`;

exports[`environment config > should support modify single environment config by api.modifyEnvironmentConfig 1`] = `
{
  "ssr": {
    "dev": {
      "assetPrefix": "/",
      "cliShortcuts": false,
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
        "reconnect": 100,
      },
      "hmr": true,
      "liveReload": true,
      "watchFiles": [],
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "mode": "development",
    "output": {
      "assetPrefix": "/",
      "charset": "utf8",
      "cleanDistPath": "auto",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "assets": 4096,
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "assets": "static/assets",
        "css": "static/css",
        "font": "static/font",
        "html": "./",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "off",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "resolve": {
      "alias": {
        "@common": "./src/common",
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
      "aliasStrategy": "prefer-tsconfig",
      "extensions": [
        ".ts",
        ".tsx",
        ".mjs",
        ".js",
        ".jsx",
        ".json",
      ],
    },
    "root": "<ROOT>",
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "base": "/",
      "compress": true,
      "cors": {
        "origin": /\\^https\\?:\\\\/\\\\/\\(\\?:\\(\\?:\\[\\^:\\]\\+\\\\\\.\\)\\?localhost\\|127\\\\\\.0\\\\\\.0\\\\\\.1\\|\\\\\\[::1\\\\\\]\\)\\(\\?::\\\\d\\+\\)\\?\\$/,
      },
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "middlewareMode": false,
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {},
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "./src/index.server.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
  "web": {
    "dev": {
      "assetPrefix": "/",
      "cliShortcuts": false,
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
        "reconnect": 100,
      },
      "hmr": true,
      "liveReload": true,
      "watchFiles": [],
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "mode": "development",
    "output": {
      "assetPrefix": "/",
      "charset": "utf8",
      "cleanDistPath": "auto",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "assets": 4096,
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "assets": "static/assets",
        "css": "static/css",
        "font": "static/font",
        "html": "./",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "off",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "resolve": {
      "alias": {
        "@common": "./src/common",
        "@common1": "./src/common1",
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
      "aliasStrategy": "prefer-tsconfig",
      "extensions": [
        ".ts",
        ".tsx",
        ".mjs",
        ".js",
        ".jsx",
        ".json",
      ],
    },
    "root": "<ROOT>",
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "base": "/",
      "compress": true,
      "cors": {
        "origin": /\\^https\\?:\\\\/\\\\/\\(\\?:\\(\\?:\\[\\^:\\]\\+\\\\\\.\\)\\?localhost\\|127\\\\\\.0\\\\\\.0\\\\\\.1\\|\\\\\\[::1\\\\\\]\\)\\(\\?::\\\\d\\+\\)\\?\\$/,
      },
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "middlewareMode": false,
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {},
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "./src/index.client.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
}
`;

exports[`environment config > tools.rspack / bundlerChain can be configured in environment config 1`] = `
[
  {
    "context": "<ROOT>",
    "devtool": "eval-source-map",
    "experiments": {
      "asyncWebAssembly": true,
      "incremental": true,
    },
    "infrastructureLogging": {
      "level": "error",
    },
    "mode": "development",
    "module": {
      "parser": {
        "javascript": {
          "exportsPresence": "error",
        },
      },
      "rules": [
        {
          "resolve": {
            "fullySpecified": false,
          },
          "test": /\\\\\\.m\\?js/,
        },
        {
          "dependency": {
            "not": "url",
          },
          "resolve": {
            "preferRelative": true,
          },
          "resourceQuery": {
            "not": /raw\\|inline/,
          },
          "sideEffects": true,
          "test": /\\\\\\.css\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core/dist/cssExtractLoader.js",
            },
            {
              "loader": "<ROOT>/packages/core/compiled/css-loader/index.js",
              "options": {
                "importLoaders": 1,
                "modules": {
                  "auto": true,
                  "exportGlobals": false,
                  "exportLocalsConvention": "camelCase",
                  "localIdentName": "[path][name]__[local]-[hash:base64:6]",
                  "namedExport": false,
                },
                "sourceMap": false,
              },
            },
            {
              "loader": "builtin:lightningcss-loader",
              "options": {
                "errorRecovery": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
            },
          ],
        },
        {
          "resolve": {
            "preferRelative": true,
          },
          "resourceQuery": /inline/,
          "sideEffects": true,
          "test": /\\\\\\.css\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "<ROOT>/packages/core/compiled/css-loader/index.js",
              "options": {
                "exportType": "string",
                "importLoaders": 1,
                "modules": false,
                "sourceMap": false,
              },
            },
            {
              "loader": "builtin:lightningcss-loader",
              "options": {
                "errorRecovery": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
            },
          ],
        },
        {
          "resourceQuery": /raw/,
          "test": /\\\\\\.css\\$/,
          "type": "asset/source",
        },
        {
          "dependency": {
            "not": "url",
          },
          "include": [
            {
              "and": [
                "<ROOT>",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
            /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "mode": undefined,
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "experimental": {
                    "cacheRoot": "<ROOT>/node_modules/.cache/.swc",
                    "keepImportAttributes": true,
                  },
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": false,
                  },
                  "transform": {
                    "decoratorVersion": "2022-03",
                    "legacyDecorator": false,
                  },
                },
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "mode": undefined,
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "experimental": {
                    "cacheRoot": "<ROOT>/node_modules/.cache/.swc",
                    "keepImportAttributes": true,
                  },
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": false,
                  },
                  "transform": {
                    "decoratorVersion": "2022-03",
                    "legacyDecorator": false,
                  },
                },
              },
            },
          ],
        },
        {
          "oneOf": [
            {
              "generator": {
                "filename": "static/image/[name].[contenthash:8][ext]",
              },
              "resourceQuery": /\\(__inline=false\\|url\\)/,
              "type": "asset/resource",
            },
            {
              "resourceQuery": /inline/,
              "type": "asset/inline",
            },
            {
              "resourceQuery": /raw/,
              "type": "asset/source",
            },
            {
              "generator": {
                "filename": "static/image/[name].[contenthash:8][ext]",
              },
              "parser": {
                "dataUrlCondition": {
                  "maxSize": 4096,
                },
              },
              "type": "asset",
            },
          ],
          "test": /\\\\\\.\\(\\?:png\\|jpg\\|jpeg\\|pjpeg\\|pjp\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tif\\|tiff\\|jfif\\|cur\\)\\$/i,
        },
        {
          "oneOf": [
            {
              "generator": {
                "filename": "static/svg/[name].[contenthash:8].svg",
              },
              "resourceQuery": /\\(__inline=false\\|url\\)/,
              "type": "asset/resource",
            },
            {
              "resourceQuery": /inline/,
              "type": "asset/inline",
            },
            {
              "resourceQuery": /raw/,
              "type": "asset/source",
            },
            {
              "generator": {
                "filename": "static/svg/[name].[contenthash:8].svg",
              },
              "parser": {
                "dataUrlCondition": {
                  "maxSize": 4096,
                },
              },
              "type": "asset",
            },
          ],
          "test": /\\\\\\.svg\\$/i,
        },
        {
          "oneOf": [
            {
              "generator": {
                "filename": "static/media/[name].[contenthash:8][ext]",
              },
              "resourceQuery": /\\(__inline=false\\|url\\)/,
              "type": "asset/resource",
            },
            {
              "resourceQuery": /inline/,
              "type": "asset/inline",
            },
            {
              "resourceQuery": /raw/,
              "type": "asset/source",
            },
            {
              "generator": {
                "filename": "static/media/[name].[contenthash:8][ext]",
              },
              "parser": {
                "dataUrlCondition": {
                  "maxSize": 4096,
                },
              },
              "type": "asset",
            },
          ],
          "test": /\\\\\\.\\(\\?:mp4\\|webm\\|ogg\\|mov\\|mp3\\|wav\\|flac\\|aac\\|m4a\\|opus\\)\\$/i,
        },
        {
          "oneOf": [
            {
              "generator": {
                "filename": "static/font/[name].[contenthash:8][ext]",
              },
              "resourceQuery": /\\(__inline=false\\|url\\)/,
              "type": "asset/resource",
            },
            {
              "resourceQuery": /inline/,
              "type": "asset/inline",
            },
            {
              "resourceQuery": /raw/,
              "type": "asset/source",
            },
            {
              "generator": {
                "filename": "static/font/[name].[contenthash:8][ext]",
              },
              "parser": {
                "dataUrlCondition": {
                  "maxSize": 4096,
                },
              },
              "type": "asset",
            },
          ],
          "test": /\\\\\\.\\(\\?:woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
        },
        {
          "dependency": "url",
          "generator": {
            "filename": "static/wasm/[hash].module.wasm",
          },
          "test": /\\\\\\.wasm\\$/,
          "type": "asset/resource",
        },
      ],
    },
    "name": "web",
    "optimization": {
      "minimize": false,
      "splitChunks": {
        "cacheGroups": {
          "lib-axios": {
            "name": "lib-axios",
            "priority": 0,
            "test": /node_modules\\[\\\\\\\\/\\]axios\\(-\\.\\+\\)\\?\\[\\\\\\\\/\\]/,
          },
        },
        "chunks": "all",
      },
    },
    "output": {
      "assetModuleFilename": "static/assets/[name].[contenthash:8][ext]",
      "chunkFilename": "static/js/async/[name].js",
      "devtoolModuleFilenameTemplate": [Function],
      "filename": "static/js/[name].js",
      "hashFunction": "xxhash64",
      "path": "<ROOT>/dist",
      "pathinfo": false,
      "publicPath": "/",
      "webassemblyModuleFilename": "static/wasm/[hash].module.wasm",
    },
    "performance": {
      "hints": false,
    },
    "plugins": [
      CssExtractRspackPlugin {
        "options": {
          "chunkFilename": "static/css/async/[name].css",
          "filename": "static/css/[name].css",
          "ignoreOrder": true,
        },
      },
      RsbuildCorePlugin {
        "name": "RsbuildCorePlugin",
      },
      HotModuleReplacementPlugin {
        "affectedHooks": undefined,
        "name": "HotModuleReplacementPlugin",
      },
      DefinePlugin {
        "_args": [
          {
            "import.meta.env.ASSET_PREFIX": "\\"\\"",
            "import.meta.env.BASE_URL": "\\"/\\"",
            "import.meta.env.DEV": true,
            "import.meta.env.MODE": "\\"development\\"",
            "import.meta.env.PROD": false,
            "process.env.ASSET_PREFIX": "\\"\\"",
            "process.env.BASE_URL": "\\"/\\"",
          },
        ],
        "affectedHooks": "compilation",
        "name": "DefinePlugin",
      },
    ],
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
      "extensions": [
        ".ts",
        ".tsx",
        ".mjs",
        ".js",
        ".jsx",
        ".json",
      ],
    },
    "target": [
      "web",
      "es2017",
    ],
    "watchOptions": {
      "aggregateTimeout": 0,
    },
  },
  {
    "context": "<ROOT>",
    "devtool": "eval",
    "experiments": {
      "asyncWebAssembly": true,
      "incremental": true,
    },
    "infrastructureLogging": {
      "level": "error",
    },
    "mode": "development",
    "module": {
      "parser": {
        "javascript": {
          "exportsPresence": "error",
        },
      },
      "rules": [
        {
          "resolve": {
            "fullySpecified": false,
          },
          "test": /\\\\\\.m\\?js/,
        },
        {
          "dependency": {
            "not": "url",
          },
          "resolve": {
            "preferRelative": true,
          },
          "resourceQuery": {
            "not": /raw\\|inline/,
          },
          "sideEffects": true,
          "test": /\\\\\\.css\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "<ROOT>/packages/core/src/ignoreCssLoader.mjs",
            },
            {
              "loader": "<ROOT>/packages/core/compiled/css-loader/index.js",
              "options": {
                "importLoaders": 0,
                "modules": {
                  "auto": true,
                  "exportGlobals": false,
                  "exportLocalsConvention": "camelCase",
                  "exportOnlyLocals": true,
                  "localIdentName": "[path][name]__[local]-[hash:base64:6]",
                  "namedExport": false,
                },
                "sourceMap": false,
              },
            },
          ],
        },
        {
          "resolve": {
            "preferRelative": true,
          },
          "resourceQuery": /inline/,
          "sideEffects": true,
          "test": /\\\\\\.css\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "<ROOT>/packages/core/compiled/css-loader/index.js",
              "options": {
                "exportType": "string",
                "importLoaders": 0,
                "modules": false,
                "sourceMap": false,
              },
            },
          ],
        },
        {
          "resourceQuery": /raw/,
          "test": /\\\\\\.css\\$/,
          "type": "asset/source",
        },
        {
          "dependency": {
            "not": "url",
          },
          "include": [
            {
              "and": [
                "<ROOT>",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "targets": [
                    "node >= 16",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "experimental": {
                    "cacheRoot": "<ROOT>/node_modules/.cache/.swc",
                    "keepImportAttributes": true,
                  },
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": false,
                  },
                  "transform": {
                    "decoratorVersion": "2022-03",
                    "legacyDecorator": false,
                  },
                },
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "targets": [
                    "node >= 16",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "experimental": {
                    "cacheRoot": "<ROOT>/node_modules/.cache/.swc",
                    "keepImportAttributes": true,
                  },
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": false,
                  },
                  "transform": {
                    "decoratorVersion": "2022-03",
                    "legacyDecorator": false,
                  },
                },
              },
            },
          ],
        },
        {
          "oneOf": [
            {
              "generator": {
                "filename": "static/image/[name].[contenthash:8][ext]",
              },
              "resourceQuery": /\\(__inline=false\\|url\\)/,
              "type": "asset/resource",
            },
            {
              "resourceQuery": /inline/,
              "type": "asset/inline",
            },
            {
              "resourceQuery": /raw/,
              "type": "asset/source",
            },
            {
              "generator": {
                "filename": "static/image/[name].[contenthash:8][ext]",
              },
              "parser": {
                "dataUrlCondition": {
                  "maxSize": 4096,
                },
              },
              "type": "asset",
            },
          ],
          "test": /\\\\\\.\\(\\?:png\\|jpg\\|jpeg\\|pjpeg\\|pjp\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tif\\|tiff\\|jfif\\|cur\\)\\$/i,
        },
        {
          "oneOf": [
            {
              "generator": {
                "filename": "static/svg/[name].[contenthash:8].svg",
              },
              "resourceQuery": /\\(__inline=false\\|url\\)/,
              "type": "asset/resource",
            },
            {
              "resourceQuery": /inline/,
              "type": "asset/inline",
            },
            {
              "resourceQuery": /raw/,
              "type": "asset/source",
            },
            {
              "generator": {
                "filename": "static/svg/[name].[contenthash:8].svg",
              },
              "parser": {
                "dataUrlCondition": {
                  "maxSize": 4096,
                },
              },
              "type": "asset",
            },
          ],
          "test": /\\\\\\.svg\\$/i,
        },
        {
          "oneOf": [
            {
              "generator": {
                "filename": "static/media/[name].[contenthash:8][ext]",
              },
              "resourceQuery": /\\(__inline=false\\|url\\)/,
              "type": "asset/resource",
            },
            {
              "resourceQuery": /inline/,
              "type": "asset/inline",
            },
            {
              "resourceQuery": /raw/,
              "type": "asset/source",
            },
            {
              "generator": {
                "filename": "static/media/[name].[contenthash:8][ext]",
              },
              "parser": {
                "dataUrlCondition": {
                  "maxSize": 4096,
                },
              },
              "type": "asset",
            },
          ],
          "test": /\\\\\\.\\(\\?:mp4\\|webm\\|ogg\\|mov\\|mp3\\|wav\\|flac\\|aac\\|m4a\\|opus\\)\\$/i,
        },
        {
          "oneOf": [
            {
              "generator": {
                "filename": "static/font/[name].[contenthash:8][ext]",
              },
              "resourceQuery": /\\(__inline=false\\|url\\)/,
              "type": "asset/resource",
            },
            {
              "resourceQuery": /inline/,
              "type": "asset/inline",
            },
            {
              "resourceQuery": /raw/,
              "type": "asset/source",
            },
            {
              "generator": {
                "filename": "static/font/[name].[contenthash:8][ext]",
              },
              "parser": {
                "dataUrlCondition": {
                  "maxSize": 4096,
                },
              },
              "type": "asset",
            },
          ],
          "test": /\\\\\\.\\(\\?:woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
        },
        {
          "dependency": "url",
          "generator": {
            "filename": "static/wasm/[hash].module.wasm",
          },
          "test": /\\\\\\.wasm\\$/,
          "type": "asset/resource",
        },
        {
          "test": /\\\\\\.node\\$/,
          "use": [
            {
              "loader": "<ROOT>/packages/core/src/transformRawLoader.mjs",
              "options": {
                "getEnvironment": [Function],
                "id": "rsbuild-transform-0",
              },
            },
          ],
        },
      ],
    },
    "name": "node",
    "optimization": {
      "minimize": false,
      "splitChunks": false,
    },
    "output": {
      "assetModuleFilename": "static/assets/[name].[contenthash:8][ext]",
      "chunkFilename": "[name].js",
      "devtoolModuleFilenameTemplate": [Function],
      "filename": "bundle.js",
      "hashFunction": "xxhash64",
      "library": {
        "type": "commonjs2",
      },
      "path": "<ROOT>/dist",
      "pathinfo": false,
      "publicPath": "/",
      "webassemblyModuleFilename": "static/wasm/[hash].module.wasm",
    },
    "performance": {
      "hints": false,
    },
    "plugins": [
      RsbuildCorePlugin {
        "name": "RsbuildCorePlugin",
      },
      DefinePlugin {
        "_args": [
          {
            "import.meta.env.ASSET_PREFIX": "\\"\\"",
            "import.meta.env.BASE_URL": "\\"/\\"",
            "import.meta.env.DEV": true,
            "import.meta.env.MODE": "\\"development\\"",
            "import.meta.env.PROD": false,
            "process.env.ASSET_PREFIX": "\\"\\"",
            "process.env.BASE_URL": "\\"/\\"",
          },
        ],
        "affectedHooks": "compilation",
        "name": "DefinePlugin",
      },
    ],
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
      "extensions": [
        ".ts",
        ".tsx",
        ".mjs",
        ".js",
        ".jsx",
        ".json",
      ],
    },
    "target": "node",
    "watchOptions": {
      "aggregateTimeout": 0,
    },
  },
]
`;
